--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-apexcharts": "^1.4.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
